--- a/notebooks/Lesson_3_Scrabble.ipynb
+++ b/notebooks/Lesson_3_Scrabble.ipynb
@@ -51,7 +51,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AA\r",
+      "\r\n",
+      "AAH\r",
+      "\r\n",
+      "AAHED\r",
+      "\r\n",
+      "AAHING\r",
+      "\r\n",
+      "AAHS\r",
+      "\r\n",
+      "AAL\r",
+      "\r\n",
+      "AALII\r",
+      "\r\n",
+      "AALIIS\r",
+      "\r\n",
+      "AALS\r",
+      "\r\n",
+      "AARDVARK\r",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head data/sowpods.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +130,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AARDVARKS', 'AALS', 'AALII', 'AAHS', 'AAHED']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scrabble_dict[10:0:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -123,37 +179,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'d' < 'c'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def is_in_order(word):\n",
-    "    \"\"\"return a true if the word is in order\"\"\""
+    "    \"\"\"return a true if the word is in order\"\"\"\n",
+    "    witer = iter(word)\n",
+    "    lettera = next(witer)\n",
+    "    for letterb in witer:\n",
+    "        if lettera > letterb:\n",
+    "            return False\n",
+    "        lettera = letterb\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_in_order(tw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wi = iter(tw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(wi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def longest_word(scrabble_dict):\n",
-    "    \"\"\"Returns all of the longest ordered words in the scrabble dictionary\"\"\""
+    "    \"\"\"Returns all of the longest ordered words in the scrabble dictionary\"\"\"\n",
+    "    curr_len = 0\n",
+    "    for word in scrabble_dict:\n",
+    "        if is_in_order(word):\n",
+    "            wl = len(word)\n",
+    "            if wl > curr_len:\n",
+    "                curr_len = wl\n",
+    "                word_list = [word]\n",
+    "            if wl==curr_len:\n",
+    "                word_list.append(word)\n",
+    "    return word_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ADDEEMS', 'ADDEEMS', 'BEEFILY', 'BILLOWY', 'CHIKORS', 'DIKKOPS', 'GIMMORS']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longest_word(scrabble_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Why do we make doc strings?"
+    "#Why do we make doc strings?\n",
+    "longest_word?"
    ]
   },
   {
@@ -185,13 +348,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 loop, best of 3: 284 ms per loop\n"
+     ]
+    }
+   ],
    "source": [
-    "#%%timeit\n",
+    "%%timeit\n",
     "scrabble_sets = [] # construct word sets\n",
     "for word in scrabble_dict:\n",
     "    scrabble_sets.append(set(word))"
@@ -199,25 +368,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 258 ms per loop\n"
+      "1 loop, best of 3: 252 ms per loop\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "# is there a better way with list comps?"
+    "scrabble_sets = [set(word) for word in scrabble_dict]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -226,19 +395,60 @@
     "#Let's look at the array object, which is a more compact list for certain immutable types\n",
     "from array import array\n",
     "from math import log\n",
+    "\n",
     "ws_lens = array('i',(len(ws) for ws in scrabble_sets)) #Initialize the array with a gen expr\n",
     "n = len(scrabble_sets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "267751"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "267751"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ws_lens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Counting the number of unique letters in each word\n",
+    "# Counting the number occurances of each unique letter number in each word\n",
     "lens = [0]*20\n",
     "for l in ws_lens:\n",
     "    lens[l-1] += 1"
@@ -246,7 +456,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5,\n",
+       " 347,\n",
+       " 3002,\n",
+       " 11852,\n",
+       " 27695,\n",
+       " 46474,\n",
+       " 57964,\n",
+       " 52950,\n",
+       " 37879,\n",
+       " 19927,\n",
+       " 7559,\n",
+       " 1843,\n",
+       " 233,\n",
+       " 19,\n",
+       " 2,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Counter(ws_lens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -263,25 +523,91 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "Counter({1: 2, 2: 3, 3: 1})"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = Counter([1,2,1])\n",
+    "b = Counter([2,3,2])\n",
+    "sum([a,b],Counter())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "word_lens = Counter(ws_lens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({1: 5,\n",
+       "         2: 347,\n",
+       "         3: 3002,\n",
+       "         4: 11852,\n",
+       "         5: 27695,\n",
+       "         6: 46474,\n",
+       "         7: 57964,\n",
+       "         8: 52950,\n",
+       "         9: 37879,\n",
+       "         10: 19927,\n",
+       "         11: 7559,\n",
+       "         12: 1843,\n",
+       "         13: 233,\n",
+       "         14: 19,\n",
+       "         15: 2})"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_lens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: --> 5\n",
-      "1: ------> 352\n",
-      "2: --------> 3349\n",
-      "3: ----------> 14854\n",
-      "4: -----------> 39547\n",
-      "5: -----------> 74169\n",
-      "6: ------------> 104438\n",
-      "7: ------------> 110914\n",
-      "8: -----------> 90829\n",
-      "9: -----------> 57806\n",
-      "10: ----------> 27486\n",
-      "11: ---------> 9402\n",
-      "12: --------> 2076\n",
-      "13: ------> 252\n",
-      "14: ---> 21\n",
-      "15: -> 2\n"
+      "0: > 1\n",
+      "1: -> 2\n",
+      "2: -> 4\n",
+      "3: --> 5\n",
+      "4: -> 3\n",
+      "5: --> 6\n",
+      "6: --> 7\n",
+      "7: --> 9\n",
+      "8: --> 8\n",
+      "9: --> 10\n",
+      "10: --> 12\n",
+      "11: --> 11\n",
+      "12: ---> 13\n",
+      "13: ---> 14\n",
+      "14: ---> 15\n"
      ]
     }
    ],
@@ -328,11 +654,119 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ws_lens[1111]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ACCESSORIZING'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scrabble_dict[1111]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Hash table and dictionaries\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Hash_table_5_0_1_1_1_1_1_LL.svg/450px-Hash_table_5_0_1_1_1_1_1_LL.svg.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ind_dict = {word: i for i, word in enumerate(scrabble_dict)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 63.08 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "10000000 loops, best of 3: 113 ns per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit \n",
+    "ind_dict['ACCESSORIZING']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 loops, best of 3: 25.7 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "scrabble_dict.index('ACCESSORIZING')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "922876837765020496"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash('ACCESSORIZING')"
    ]
   },
   {
@@ -369,7 +803,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sorted_scrabble = SortedList(scrabble_dict)"
