--- a/notebooks/Lesson_13_SQL.ipynb
+++ b/notebooks/Lesson_13_SQL.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 13: Learning from Text\n",
+    "Lesson 13: Relational Databases and SQL\n",
     "====================\n",
     "---\n",
     "Prof. James Sharpnack<br>\n",
@@ -76,16 +76,16 @@
     "  You can then insert rows into the table with\n",
     "  <code>insert into animals values (\"Emmy\", \"dog\", 1, \"CA\")</code>.\n",
     "  Furthermore, we can retrieve records with the select statement by\n",
-    "  <code>select * from animals</code>\n",
+    "  <code>select \\* from animals</code>\n",
     "  which will return the entire animals table.\n",
-    "  You can add a \"where\" clause to the select statement: <code>select * from animals where species=\"dog\"</code>.\n",
+    "  You can add a \"where\" clause to the select statement: <code>select \\* from animals where species=\"dog\"</code>.\n",
     "  This will select only the records with the species set to 'dog'.\n",
     "  Other operators can be used, such as <code>=,<,>,!=,between,like,in,is not null, as</code>, where 'like' will match patterns for text, and 'as' can change a field name in the select statement.\n",
     "</p>\n",
     "<p>  \n",
     "  You can apply functions and select specific columns with the select statement as in <code>select name, log(age + 1) from animals</code>.\n",
-    "  Moreover, there are aggregating functions such as in <code>select count(*) from animals</code> which will return the number of records.\n",
-    "  The group by clause, as in <code>select avg(age), count(*) from animals group by species</code> will group the records by species and then apply aggregations within the groups.\n",
+    "  Moreover, there are aggregating functions such as in <code>select count(\\*) from animals</code> which will return the number of records.\n",
+    "  The group by clause, as in <code>select avg(age), count(\\*) from animals group by species</code> will group the records by species and then apply aggregations within the groups.\n",
     "  Another common clause is the order by clause as in <code>select name from animals where species=\"dog\" order by age</code> will return the dogs in ascending order of age.\n",
     "</p>\n",
     "\n",
@@ -112,7 +112,7 @@
     "  The above statement is called a left join, and the returned records match a record in the animals table.\n",
     "  So for example, if the record <code>\"Kermit\", \"cat\", 10, 19234</code> does not have a match then do you fill NAs (left join) or do you remove it (inner join).\n",
     "  If you have shelter records with no match, then in a left join will not return them, but you could do an outer join to return that with NAs filled in the animal columns.\n",
-    "  This would be accomplished with <code>select * from animals outer join shelters on animals.shelter_id = shelters.id</code>.\n",
+    "  This would be accomplished with <code>select \\* from animals outer join shelters on animals.shelter_id = shelters.id</code>.\n",
     "</p>\n",
     "\n",
     "**Checkpoint:** Look at <a href=\"http://www.sqltutorial.org/\">this tutorial site</a>, where sections 1-8 are relevant.  You should use it more as a reference. There are also <a href=\"http://www.itl.nist.gov/div897/ctg/dm/sql_examples.htm\">these examples</a>."
